k8s/api-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  template:
    metadata:
      name: api-gateway
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:
        - name: cpy-docker-test-registry
      containers:
      - name: api-gateway
        image: eu.gcr.io/cpy-docker-test/api-gateway:GIT_REV_PLACEHOLDER
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        ports:
        - containerPort: 8080
        - containerPort: 8081
