k8s/api-gateway-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service-lb
  labels:
    app: api-gateway-service-lb
spec:
  ports:
  - port: 80
    name: gateway-port
    protocol: TCP
    targetPort: 8080
  - port: 8081
    name: dashboard-port
    protocol: TCP
    targetPort: 8081
  selector:
    app: api-gateway
  type: LoadBalancer
