k8s/api-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: dev.app.cupenya.com
    http:
      paths: 
      - path: /api/*
        backend:
          serviceName: api-gateway-service
          servicePort: 80
      - path: /*
        backend:
          serviceName: cupenya-web-service
          servicePort: 80
