k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: micro.cupenya.com
    http:
      paths: 
      - path: /api
        backend:
          serviceName: api-gateway-svc
          servicePort: 80
